# unscriptorium

./: ARCHITECTURE.md  CONTRIBUTING.md  INSTALLATION.md  README.md  check_sqlite.py  check_uuid_nbk.py  debug_page1.py  decode_ion.py  decode_ion2.py  dump_nbk.py  extract_text.py  find_pages.py  fix_nbk.py  parse_schema.py  parse_schema2.py  pyproject.toml  raw_ion.py  read_content.py  read_fragments.py  read_nbk.py  render_ink.py  scan_pages.py
kindle_notes/: __init__.py  classify.py  cli.py  database.py  extract.py  ink_render.py  layout.py  markdown.py  ocr.py
test_output/: transcriptions.json
tests/: test_classify.py  test_cli.py  test_database.py  test_extract_pipeline.py  test_ink_render_api.py  test_markdown_build.py  test_ocr.py
